deployments/k8s/app/order-system/order-api/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: order-api-deployment
  namespace: order-system
  labels:
    app: order-api
    part-of: order-system
spec:
  replicas: 1
  selector:
    matchLabels:
      app: order-api
  template:
    metadata:
      labels:
        app: order-api
        part-of: order-system
    spec:
      containers:
      - name: order-api
        image: order-api:latest 
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 8080
        volumeMounts:
        - name: config-volume
          mountPath: /opt/order_api/config/
          readOnly: true
        resources:
          limits:
            memory: "256Mi"
            cpu: "500m"
          requests:
            memory: "128Mi"
            cpu: "100m"
      volumes:
      - name: config-volume
        configMap:
          name: order-api-config
