deployments/k8s/app/order-system/order-api/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: order-api
spec:
  selector:
    app.kubernetes.io/name: order-api
  ports:
    - name: http
      port: 80
      targetPort: 8080
    - name: metrics
      port: 8081
      targetPort: 8081
  type: ClusterIP
